HTML Website Assignment

--- a/more.html
+++ b/more.html
@@ -156,6 +156,7 @@
         </p>
       </center>
     </main>
+    <!--Defines the footer at the end of the page-->
     <footer>
       <p>&#169; 2022 Emmanuella</p>
     </footer>
